[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }